:sparkles: add card animations

--- a/RotatingCards/index.html
+++ b/RotatingCards/index.html
@@ -8,28 +8,39 @@
     </head>
     <body>
         <div class="page">
-            <div class="row">
-                <div class="col-1-of-3">
-                    <div class="card">
-                        <h4 class="text">
-                            Column 1        
-                        </h4>
+            <div class="cards">
+                <div class="row">
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                Card Front        
+                            </div>
+                            <div class="card__side card__side--back">
+                                Card back        
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-1-of-3">
-                    <div class="card">
-                        <h4 class="text">
-                            Column 2
-                        </h4>
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                Card Front        
+                            </div>
+                            <div class="card__side card__side--back">
+                                Card back        
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-1-of-3">
-                    <div class="card">
-                        <h4 class="text">
-                            Column 3
-                        </h4>
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                Card Front        
+                            </div>
+                            <div class="card__side card__side--back">
+                                Card back        
+                            </div>
+                        </div>
+    
                     </div>
-
                 </div>
             </div>
         </div>
