add shadows to cards

--- a/RotatingCards/index.html
+++ b/RotatingCards/index.html
@@ -13,10 +13,14 @@
                     <div class="col-1-of-3">
                         <div class="card">
                             <div class="card__side card__side--front">
-                                Card Front        
+                                <div class="card__side--front--mask">
+
+                                </div>        
                             </div>
                             <div class="card__side card__side--back">
-                                Card back        
+                                <div class="card__side--back--mask">
+
+                                </div>           
                             </div>
                         </div>
                     </div>
