--- a/RotatingCards/index.html
+++ b/RotatingCards/index.html
@@ -14,12 +14,12 @@
                         <div class="card">
                             <div class="card__side card__side--front">
                                 <div class="card__side--front--mask">
-
+                                    Front
                                 </div>        
                             </div>
                             <div class="card__side card__side--back">
                                 <div class="card__side--back--mask">
-
+                                    Back
                                 </div>           
                             </div>
                         </div>
